src/test/ui/parser/bind-struct-early-modifiers.stderr
error: expected `,`
  --> $DIR/bind-struct-early-modifiers.rs:6:19
   |
LL |         Foo { ref x: ref x } => {}, //~ ERROR expected `,`
   |                   ^

error: aborting due to previous error

